--- a/app/templates/create-account.hbs
+++ b/app/templates/create-account.hbs
@@ -1,5 +1,5 @@
 {{page-title "CreateAccount"}}
-      {{#if this.validation}}
+      {{#if this.accountValidation}}
         <div class="container"><br>
           <i class="fa fa-bank" id="icon"></i>
           <h1>ZOHO UPI-TRANSACTION</h1>
