--- a/app/templates/transfer-amount.hbs
+++ b/app/templates/transfer-amount.hbs
@@ -15,7 +15,7 @@
       <p>to transfer amount</p><br>
       <p class="error">{{this.errMsg}}</p>
       <form>
-        {{#if this.accountValid}}
+        {{#if this.accountValidation}}
           <Input
             @type="text"
             @placeholder="Enter the receiver account number"
